dnl -*- sh -*-
dnl
dnl  Authors:
dnl    Ralf Scheidhauer (scheidhr@dfki.de)
dnl 
dnl  Contributors:
dnl    optional, Contributor's name (Contributor's email address)
dnl 
dnl  Copyright:
dnl    Ralf Scheidhauer (1998)
dnl 
dnl  Last change:
dnl    $Date$ by $Author$
dnl    $Revision$
dnl 
dnl  This file is part of Mozart, an implementation 
dnl  of Oz 3:
dnl     http://www.mozart-oz.org
dnl 
dnl  See the file "LICENSE" or
dnl     http://www.mozart-oz.org/LICENSE.html
dnl  for information on usage and redistribution 
dnl  of this file, and for a DISCLAIMER OF ALL 
dnl  WARRANTIES.
dnl

dnl Process this file with autoconf to produce a configure script.

dnl *****************************************************************
dnl INITIALIZE
dnl *****************************************************************

dnl This will check that we are in the Oz directory and initiate
AC_INIT(oz.cc)
OZ_INIT

OZ_CXX_CHOOSE

# PLATFORM is defined by OZ_INIT
: ${platform=$PLATFORM}

case "$platform" in
    win32-i486)
	if test "$target" = NONE
	then # compiling for mingw32 under cygwin
	    BINDIRNAME=bin
	else # cross-compiling
	    BINDIRNAME=winbin
	fi
    ;;

    *)
	BINDIRNAME=winbin
    ;;
esac

AC_SUBST(CXX)
AC_SUBST(BINDIRNAME)

AC_CHECK_TOOL(AR, ar)
AC_CHECK_TOOL(WINDRES, windres)

dnl *****************************************************************
dnl FINALIZE
dnl *****************************************************************

AC_OUTPUT(Makefile res.rc)


errprint(ifdef([OZ_INIT],
 [autoconf succeeded
],
 [autoconf failed: use 'autoconf -l ..' to include ../aclocal.m4.
]))
